@@ -3,6 +3,7 @@ dgm-lib v3.x.x
     * Enums are now accepted, internally calling `std::to_underlying`
  * dgm::App sets a default view encapsulating the whole screen at a current resolution before each draw
  * Add `isIndexValid` helper to `dgm::SpatialBuffer`
+ * Add advanced collision support for combinations of rectangles and circles
 
 dgm-lib v3.1.0
  * `dgm::Controller::readAnalog` no longer returns negative values for negative axii halves
